Modificación nombre variables (no todas). Inicio configurado y botones con el cursor de la mano

--- a/src/main/java/com/boquerontech/supermercadoboqueron/clientes/GestionClientes.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/clientes/GestionClientes.form
@@ -209,7 +209,7 @@
         </Container>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="cabecera">
+    <Container class="javax.swing.JPanel" name="pnlCabecera">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="fd" green="fd" red="e9" type="rgb"/>
@@ -223,7 +223,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel2">
+        <Component class="javax.swing.JLabel" name="lblTittle">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="36" style="1"/>
